Remove original theme img alignment, fix hero row.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -52,7 +52,6 @@ ul, ol, dl, figure,
  */
 img {
     max-width: 100%;
-    vertical-align: middle;
 }
 
 /**
